integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_redeem_cancel_redeem.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "5WaPA7HLZKGg56bcKiroMXAzHmB1mdxK3QTeCDepLkiK",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "JBLMxYC5JMW9v2yGuSM2xtFqsD7omw2gQS2YmcXPz3dL",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "DLrNQJ6gJbfsqBLe3QXMVc8j2kjVtFqFbXd6rFsoFVyG",
    "creator_hash": "58PDE6bzJweEP4NauMXugPYfjkZMzGGptDyH7rP4ZSEq",
    "asset_hash": "AqMe3832WCXHbaaKAPs5MFo55oWBEKKN5iigTaoRtHFr",
    "tree": "Hk1644vHxBJ33ZZ1QW5P1zpex9qJ22RdHCwk46aaR16k",
    "seq": 3,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "GXxPiX5aAQJPSnNoJ4WwwNwbjmUEPdeCiSQoDgXkg2X7",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
