integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_transfer_burn.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "8vw7tdLGE3FBjaetsJrZAarwsbc8UESsegiLyvWXxs5A",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "9nyYr9vyDZU8SnVNgQ58kcEtcpXUj57vkzwd4UjbZrS8",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "GFsq2BCwZdQaErGkQD5my36tpC8Cg38HFuMvbM6ShC2h",
    "creator_hash": "2ct1dcDUbFDHfpdtuZ5vdkPB1ewjFg9pxRi58Yj4huCj",
    "asset_hash": "4R8dTjLuyetziKZFeM45Qa1XuGn3vd4LdJkGPEJhotAq",
    "tree": "CnBt2TJrw1dXUBfVBf2Ah4Cz5s84jhBG7cejdPF19Eyh",
    "seq": 3,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "CXiFtmdyYxeX5hydprYLaMjH4h2r8NBQ8NTezzfemGv5",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "BJ5jYD1AGSTR7fvZyvUoj59PY7cF8Ki2j1gB36PJFuTD"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": true
}
