integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_verify_collection.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "2WjoMU1hBGXv8sKcxQDGnu1tgMduzdZEmEEGjh8MZYfC",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "2322PBMYe82eqDMmzJzUdWYWjhDzr1qGaujs32sNnHp1",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "5qnPtMuhWzj8rRviKV1YRitUxgt4iFqFkpvyuBn5rTKW",
    "creator_hash": "FM4zS99NvwRZm5UGgcJW1pQEWDtpgH4jaiCaTkMn6mxD",
    "asset_hash": "DaxPr3AmJoqwJxgeeTSXZjM8eXzj2aEkbAWChJEhh53e",
    "tree": "F7gUS2b9mMKHWz6yebb447tAt9wUZbwtwqFabJbhi4V2",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "4zapNXifB7Lz5XGUtsYQ3gsEujK2dqFw4mE9NY57NrtD"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "8xJtnbXezwkUwvj5tMUUK7ortAPa3Sm5sJPvTUhXhKR5",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
