integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_verify_collection_unverify_collection.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "BiHHJ1gKV4exTjPe7PE6aydgMVqRUzzz8aeWYCGhZJ4s",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "FB3wCJHTxrKFrzHXfkf2wZPYFNioKhmSvEbackvuCfJZ",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "8wZ2jDVA3gdirM6QtZrQHBcuJsLM4TZusEAKEEfSvgKw",
    "creator_hash": "A8KEBkNKGsouiKAsE5ARHqNHGTb7ZzPi6LHesaZCL4Aw",
    "asset_hash": "BpyVeWUUM7jaT77R2o7eZ19aQMq6ihtNY7GctWt6yXCZ",
    "tree": "7BgR46hR4ZEERegqpUyA7H11d7k43skjs9nLNX6vVUQW",
    "seq": 3,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "FhBQpV7TdZHZe6rrS9hVhkmBZbjE6RDkD5QJ8XgcYHYX",
      "verified": false
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "3aUG6gNsFmtvEMhHf1D58f6eJavABBiPHdHJvY7odGKu",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
