integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests__mint_verify_creator.snap
---
source: integration_tests/tests/integration_tests/cnft_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "5rmTyghEuZhRTB77L3KqGMy6h5RpSNWNLj14avbxGNKB",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "CytP31N7oz9etRF9ddgav6JzEhcWuZXTSTwh3jP7zRa",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "31vt7MSZzRykZN1FjQktuk8oaWCVL9SzfMyX9Q2RtTaa",
    "creator_hash": "4GAv4MMcgC7xjLuLHSMxxoRpp2cCbz52f9vhYK7GNZMX",
    "asset_hash": "6mfR173y5dNp19LzqQXruUWrbPbFFC9TGbqUN1ArNsBm",
    "tree": "6XLLEYd2AtUFAP2ysaTGoUj3QmzPumqH1MX2n7DzFrBU",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "rU9dhXotNmpzzBHmQZKAGHGSvcLN6VB2j4TC5rTHPz3",
      "share": 45,
      "verified": true
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
